# metal-playground

./: CMakeLists.txt  README.md
metal-cmake/: CMakeLists.txt
src/: CMakeLists.txt
src/00-hello-metal/: delegates.cpp  delegates.hpp  main.cpp
src/01-primitive/: delegates.cpp  renderer.cpp  renderer.hpp
src/02-argbuffers/: delegates.cpp  renderer.cpp  renderer.hpp
src/03-animation/: delegates.cpp  renderer.cpp  renderer.hpp
src/04-instancing/: main.cpp  renderer.cpp  renderer.hpp
src/05-perspective/: delegates.cpp  delegates.hpp  math.cpp  math.hpp  renderer.cpp  renderer.hpp
src/06-compute/: 06-compute.cpp
